--- a/osa3/backend/package.json
+++ b/osa3/backend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
@@ -15,6 +17,8 @@
   },
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
   "eslintConfig": {
