--- a/osa3/backend/package.json
+++ b/osa3/backend/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.6",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,6 +20,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "build:ui": "rm -rf build && cd ../../osa2/puhelinluettelo && npm run build --prod && cp -r build ../../osa3/backend",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -37,7 +40,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.9.0",
     "json-server": "^0.16.1",
     "nodemon": "^2.0.4"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
