--- a/osa4/blogs/package.json
+++ b/osa4/blogs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Axel Cedercreutz",
   "license": "ISC",
@@ -17,6 +17,11 @@
     "mongoose": "^5.10.6"
   },
   "devDependencies": {
+    "jest": "^26.4.2",
+    "lodash": "^4.17.20",
     "nodemon": "^2.0.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
