--- a/osa4/blogs/package.json
+++ b/osa4/blogs/package.json
@@ -4,9 +4,9 @@
   "description": "blog list application that allows users to save information about interesting blogs they have stumbled across on the internet.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Axel Cedercreutz",
   "license": "ISC",
@@ -19,7 +19,8 @@
   "devDependencies": {
     "jest": "^26.4.2",
     "lodash": "^4.17.20",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
